_source/_sass/_layout.scss
html {
  font-size: 62.5%;
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  background: $color-background;
  font: 400 #{$font-size-base}/#{$font-line-height} $font-family-base;
  color: $color-text;
  border-top: 0.5rem solid $color-accent;
}

.wrapper {
  @extend %wrapper;
}

/*
    Site Header
*/
.masthead {
  padding-top: $spacing-unit;
  padding-bottom: $spacing-unit;
  background: $color-details;
  border-bottom: 0.1rem solid darken($color-details, 20%);
  text-align: center;

  .site-title {
    font-weight: bolder;
    display: block;
    max-width: 25rem;
    margin: 0 auto;
    font-size: $font-size-base * 1.25;

    img {
      display: block;
      width: 15rem;
      height: auto;
      margin: 0 auto;
    }
  }
}

/*
    The Content
*/

.post-meta {
  font-size: $font-size-small;
  color: $color-details;

  a {
    border-bottom: 0.1rem dotted $color-details;
    color: darken($color-details, 40%);
  }
}

.post-content {
  margin-top: $spacing-unit;
  margin-bottom: $spacing-unit;
  font-family: $font-family-content;
  line-height: 1.7;

  .post-cover {
    display: none;
  }
}

.post header,
article.older-post {
  padding-top: $spacing-unit * 2;
  padding-bottom: $spacing-unit * 2;
  text-align: center;
  position: relative;
  overflow: hidden;

  img {
    position: absolute;
    z-index: -1;
    top: -30rem;
    left: -25%;
    min-width: 150vw;
    object-fit: cover;
    object-position: center center;
    filter: blur(1rem);
  }

  h1, p {
    text-shadow: 0 0 1.5rem $color-text;

    &, a {
      color: $color-background;
    }
  }

  .post-meta {
    margin-bottom: 0;
  }
}

.post {
  nav {
    margin-top: $spacing-unit;
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: relative;

    @include on-laptop {
      &:before {
        background: $color-details;
        content: "";
        display: block;
        position: absolute;
        bottom: 0;
        left: calc( 50% - .1rem );
        top: 0;
        transform: rotate(5deg);
        width: 0.1rem;
      }
    }

    .nav-link {
      flex: 1 1 40%;
      max-width: calc( 50% - 10.5rem );
      padding: $spacing-unit;

      a {
        font-size: $font-size-base * 1.25;
        font-weight: 300;
        color: $color-text;

        &:hover,
        &:focus {
          color: $color-details;
        }
      }

      @include on-palm {
        border-top: .1rem solid $color-details;
        padding: 0;
        display: block;
        max-width: 100%;
        padding-top: 1.5rem;
      }
    }

    strong {
      font-size: $font-size-small;
      color: $color-details;
      display: block;
    }

    .prev {
      text-align: right;
      align-self: flex-start;

      @include on-palm {
        text-align: left;
      }
    }

    .next {
      text-align: left;

      &:first-child {
        align-self: flex-end;
        margin-left: auto;
      }
    }
  }
}

.pag404 {
  margin-top: $spacing-unit * 2;

  h1 {
    text-align: center;
  }
}

/*
    Site Footer
*/
.colophon {
  background: $color-details;
  border-top: 0.1rem solid darken($color-details, 20%);
  padding-top: $spacing-unit;
  padding-bottom: $spacing-unit;
  color: darken($color-details, 40%);

  .wrapper {

    .site-info {
      font-weight: 700;
    }

    .contact {
      a {
        &:not(:last-child) {
          margin-right: $spacing-unit / 2;
        }
      }

      svg {
        height: $font-size-base * $font-line-height;
        width: $font-size-base * $font-line-height;
        fill: $color-text;
        transition: fill 0.3s ease;

        &:hover,
        &:focus {
          fill: darken($color-details, 40%);
        }
      }
    }

    @include on-laptop {
      display: flex;
      flex-flow: row wrap;

      .site-info {
        flex: 1 0 30rem;
        margin-right: auto;
        align-self: center;
      }

      .contact {
        flex: 0 1 20rem;
        text-align: right;
      }
    }

    .credits {
      font-size: $font-size-small;

      a {
        color: inherit;
        border-bottom: 0.1rem dotted darken($color-details, 40%);
      }
    }
  }
}

